<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationOnApp">

    <ImageView
        android:id="@+id/paintbtndef"
        android:layout_width="64dp"
        android:layout_height="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/_8846fc13fe2a78d494d6285240ec76f" />

    <ImageView
        android:id="@+id/sizebtndef"
        android:layout_width="60dp"
        android:layout_height="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paintbtndef"
        app:srcCompat="@drawable/size_size_chart_icon_11563073046vwqqoyfxlp" />

    <TextView
        android:id="@+id/Q1"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:text="@string/Q1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Q2"
        android:layout_width="368dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:text="@string/Q2"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizebtndef" />

    <TextView
        android:id="@+id/erasermendef"
        android:layout_width="51dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/E"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q2" />

    <TextView
        android:id="@+id/searchmendef"
        android:layout_width="55dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/Ser"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erasermendef" />

    <TextView
        android:id="@+id/viewmendef"
        android:layout_width="68dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/view"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchmendef" />

    <TextView
        android:id="@+id/help"
        android:layout_width="57dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/H"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/viewmendef"
        app:layout_constraintTop_toBottomOf="@+id/viewmendef" />

    <TextView
        android:id="@+id/Q3"
        android:layout_width="355dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Q3"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help" />

    <TextView
        android:id="@+id/nameofapp"
        android:layout_width="88dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/AppName"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/creatorname" />

    <TextView
        android:id="@+id/creatorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Me"
        app:layout_constraintStart_toEndOf="@+id/help"
        app:layout_constraintTop_toBottomOf="@+id/Q3" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/V"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/nameofapp"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/safedef"
        android:layout_width="332dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:text="@string/defSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q1" />

    <TextView
        android:id="@+id/undodef"
        android:layout_width="331dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:text="@string/defUndo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safedef" />

    <TextView
        android:id="@+id/colordef"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/defColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/paintbtndef"
        app:layout_constraintTop_toBottomOf="@+id/undodef" />

    <TextView
        android:id="@+id/sizdef"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/defSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sizebtndef"
        app:layout_constraintTop_toBottomOf="@+id/colordef" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/menu1"
        app:layout_constraintStart_toEndOf="@+id/erasermendef"
        app:layout_constraintTop_toBottomOf="@+id/Q2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="337dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/menu2"
        app:layout_constraintStart_toEndOf="@+id/searchmendef"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:text="@string/menu3"
        app:layout_constraintStart_toEndOf="@+id/viewmendef"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="326dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/menu4"
        app:layout_constraintStart_toEndOf="@+id/help"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="41dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/Name"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/creatorname"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="32dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:text="@string/app"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="53dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Ver"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/safedef"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q1"
        app:srcCompat="@drawable/save" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="56dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/undodef"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/undo_png_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>