<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/usernam"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/UserName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/UsernameInput"
        android:layout_width="276dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/UserNameInput"
        app:layout_constraintStart_toEndOf="@+id/usernam"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="81dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/Password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernam" />

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:password="true"
        android:text="@string/PasswordInput"
        app:layout_constraintStart_toEndOf="@+id/passwordtext"
        app:layout_constraintTop_toBottomOf="@+id/UsernameInput" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/ButtonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordInput" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="414dp"
        android:layout_height="419dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/mainmenupicnobackground" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="347dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonLogin"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>