<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search"
    android:paddingTop="2dp"
    >

    <ImageView
        android:id="@+id/FoundImg"
        android:layout_width="384dp"
        android:layout_height="556dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/SearchGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explmessage"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/SearchGallery"
        android:layout_width="281dp"
        android:layout_height="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/FileName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/explmessage"
        android:layout_width="392dp"
        android:layout_height="89dp"
        android:layout_marginTop="4dp"

        android:text="@string/Explain"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toEndOf="@+id/SearchGallery"
        app:layout_constraintTop_toTopOf="@+id/SearchGallery" />
</androidx.constraintlayout.widget.ConstraintLayout>